--- a/app/views/pet_histories/_form.html.erb
+++ b/app/views/pet_histories/_form.html.erb
@@ -12,6 +12,13 @@
   <% end %>
 
   <div class="field">
+    <%= form.label :pet %>
+    <%= form.select :pet_id, options_for_select(@pets), prompt: "select pet"  %>
+
+  </div>
+
+
+  <div class="field">
     <%= form.label :weight %>
     <%= form.text_field :weight %>
   </div>
