--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -2,13 +2,14 @@
 
 <h1>Pets</h1>
 
-<table>
+<table class='table'>
   <thead>
     <tr>
       <th>Name</th>
       <th>Race</th>
       <th>Birthdate</th>
       <th>Visitas</th>
+      <th>Description</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,14 +21,21 @@
         <td><%= pet.race %></td>
         <td><%= pet.birthdate %></td>
         <td><%= pet.history_count%></td>
-        <td><%= link_to 'Show', pet %></td>
-        <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
-        <td><%= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+
+        <% pet.pet_histories.each do |i| %>
+          <td> <%= i.description %></td>
+        <% end %>  
+
+        <td><%= link_to 'Show', pet, class:"btn btn-secondary text-light" %></td>
+        <td><%= link_to 'Edit', edit_pet_path(pet), class:"btn btn-secondary text-light" %></td>
+        <td><%= link_to 'Destroy', pet, method: :delete, class:"btn btn-secondary text-light", data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Pet', new_pet_path %>
+<div class="text-right">
+<%= link_to 'New Pet', new_pet_path, class:"btn btn-secondary text-light"%>
+</div>
